@@ -8,8 +8,8 @@ from backend_cairo import RendererCairo
 import cairo
 import cairo.gtk
 
-#backend_version = 'PyGTK(%d.%d.%d),PyCairo(%d.%d.%d)' % (gtk.pygtk_version + cairo.version_info)
-backend_version = 'PyGTK(%d.%d.%d)' % gtk.pygtk_version
+backend_version = 'PyGTK(%d.%d.%d),PyCairo(%d.%d.%d)' % (gtk.pygtk_version + cairo.version_info)
+#backend_version = 'PyGTK(%d.%d.%d)' % gtk.pygtk_version
 
 DEBUG = False
 
